# Gmail-AI-Bot

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/gmail_ai_bot/: ai_service.py  config.py  gmail_quickstart.py  main.py
src/gmail_ai_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gmail_ai_bot/tools/: __init__.py  list_emails.py  read.py  reply.py  write.py
